# tw-code-qa

./: .env.example  .gitignore  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini
docs/: system-design.md
scripts/: download_dataset.py
src/: __init__.py
src/config/: __init__.py  agent_models.json  llm_config.py  logging_config.py  settings.py
src/config/__tests__/: test_config_init.py  test_llm_config.py  test_logging_config.py  test_settings.py
src/constants/: __init__.py  agents.py  dataset.py  llm.py  quality.py
src/core/: __init__.py  dataset_manager.py
src/core/__tests__/: test_dataset_manager.py
src/models/: __init__.py  dataset.py  quality.py  workflow.py
src/models/__tests__/: test_quality.py
src/services/: __init__.py  data_loader.py  llm_service.py
src/services/__tests__/: test_data_loader.py  test_llm_service.py
src/utils/: __init__.py  format_converter.py  recovery.py
src/utils/__tests__/: test_format_converter.py  test_recovery.py
src/workflow/: __init__.py  graph.py  state.py
src/workflow/__tests__/: test_graph.py
src/workflow/nodes/: __init__.py  analyzer_designer_node.py  evaluator_node.py  reproducer_node.py
src/workflow/nodes/__tests__/: test_analyzer_designer_node.py  test_evaluator_node.py  test_reproducer_node.py
