[project]
name = "tw-code-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "huggingface-hub[hf-xet]>=0.34.3",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.3",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "tqdm>=4.67.1",
    "transformers>=4.55.0",
]
