[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tw-code-qa"
version = "0.1.0"
description = "Traditional Chinese Code-QA Dataset Conversion System using Multi-Agent Architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Data Processing
    "datasets>=4.0.0",
    "pandas>=2.3.1",
    "numpy>=2.2.6",
    "pyarrow>=10.0.0",
    
    # AI & LLM Framework
    "langchain>=0.3.27",
    "langgraph>=0.6.3",
    "langchain[openai]",
    "langchain[anthropic]",
    "langchain[google-genai]",
    "langchain-community>=0.3.0",
    
    # Utilities
    "tqdm>=4.67.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Optional UI dependencies
    "streamlit>=1.0.0",
    "gradio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
